--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,4 +22,4 @@ jobs:
         run: clojure -T:cljfmt check
 
       - name: Run the clj tests
-        run: clojure -M:dev/test
+        run: clojure -M:dev:test
